# beacon-delivery-compass

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-dev.yaml  .pre-commit-prod.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  LICENSE  Makefile  PLAN.md  README.md  ROADMAP.md  SECURITY.md  TASK_STATUS.txt  check_env.py  check_env_imports.py  pyproject.toml  pytest.ini  requirements.txt  run_test.py  run_tests.py  run_tests.sh  run_with_debug.py  setup.py  simple_test.py  test_output.txt  test_requirements.txt  vulnerability-report.json
.claude/: settings.local.json
.claude/agents/: README.md  docs-architect.md  python-pro.md  test-automator.md
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  performance.yml  product-analytics.yml
.kiro/steering/: product.md  structure.md  tech.md
archive/project-history/: PLAN.md  PR_DESCRIPTION_MAIN.md
config/: notifications.example.json  notifications.json  product_metrics.json
docs/: ANALYTICS_DASHBOARD.md  CHANGELOG.md  DEPENDENCY_MANAGEMENT.md  DEVELOPMENT_ANALYTICS.md  ENHANCEMENT_PLAN.md  PRODUCT_ANALYTICS.md  README.md  TESTING.md  api-reference.md  architecture.md  configuration.md  extended-format-guide.md  glossary.md  installation.md  integrations.md  quickstart.md  scripts-readme.md  security-scanning-solutions.md  troubleshooting.md  usage.md
docs/api/: api.md
docs/archive/: README.md
docs/delivery/: integrations.md  quickstart.md  team_onboarding.md  troubleshooting.md  usage.md
docs/development/: product-strategy.md  roadmap.md  scripts.md  testing.md
docs/development/analytics/: implementation.md  product.md
docs/development/architecture/: overview.md  performance.md
docs/development/performance/: optimization.md
docs/development/security/: README.md  exception-handling-guidelines.md  implementation.md  roadmap.md
docs/enhanced-extended-format/: README.md
docs/enhanced-extended-format/api-reference/: analytics-engine.md  collaboration-analyzer.md  time-analyzer.md
docs/enhanced-extended-format/examples/: large-project-insights.md  release-preparation.md  small-team-analysis.md
docs/enhanced-extended-format/migration/: from-basic-extended.md
docs/enhanced-extended-format/samples/: large-project-output.txt  release-prep-output.txt  small-team-output.txt
docs/enhanced-extended-format/troubleshooting/: common-issues.md  faq.md
docs/enhanced-extended-format/user-guide/: getting-started.md
docs/enhancements/issue-10-extended-format/: README.md  architecture.md
docs/enhancements/issue-10-extended-format/tasks/: README.md  task-01-time-analytics.md  task-02-team-metrics.md  task-03-code-quality.md  task-04-risk-indicators.md  task-05-ascii-charts.md  task-06-heatmap-viz.md  task-07-trend-charts.md  task-08-rich-formatter.md  task-09-section-renderers.md  (+3 more)
docs/examples/: advanced-usage.md  basic-usage.md
docs/integration/: guide.md  troubleshooting.md
docs/migration/: enhanced-extended-migration-guide.md
docs/playbooks/: team_onboarding.md  weekly-product-review.md  weekly_playbook.md
docs/samples/: weekly_report.json  weekly_report.txt
docs/security/: historical-audit-20250724.md
enhanced-extended-format/: README.md
enhanced-extended-format/migration/: from-basic-extended.md
integration/: troubleshooting.md
scripts/: README.md  __init__.py  analytics_reporter.py  check_machine_paths.sh  commit-analytics.sh  fix_datetime_issues.py  notification_system.py  product_analytics.py  product_insights_cli.py  security_validation.py  setup.bat  setup.sh  setup_product_analytics.py  test_advanced_usage.sh  test_basic_usage.sh  test_security.py  weekly_report.sh
src/beacon/: __init__.py  cli.py
src/beacon/core/: analyzer.py  models.py
src/beacon/formatters/: extended.py  json_format.py  standard.py
src/beaconled/: __init__.py  cli.py  cli.py.backup  config.py  exceptions.py
src/beaconled/analytics/: README.md  __init__.py  collaboration_analyzer.py  coverage_analyzer.py  engine.py  models.py  quality_analyzer.py  risk_analyzer.py  time_analyzer.py
src/beaconled/core/: __init__.py  analyzer.py  date_errors.py  date_utils.py  models.py
src/beaconled/formatters/: __init__.py  ascii_chart.py  base_formatter.py  chart.py  extended.py  heatmap.py  json_format.py  rich_formatter.py  standard.py
src/beaconled/utils/: __init__.py  date_utils.py  performance.py  security.py
src/git_analytics/: __init__.py  cli.py
src/git_analytics/core/: analyzer.py  models.py
src/git_analytics/formatters/: json_format.py  standard.py
tests/: conftest.py  test_security_sanitization.py  test_simple.py  test_utils.py
tests/fixtures/: custom_metrics.json
tests/integration/: test_analytics_engine.py  test_cli_dates.py  test_cli_timezones.py  test_end_to_end.py  test_end_to_end_pipeline.py
tests/performance/: conftest.py  test_analytics_benchmarks.py  test_large_repo_benchmark.py
tests/unit/: test_analytics_engine.py  test_analytics_engine_unit.py  test_analyzer.py  test_analyzer_coverage.py  test_analyzer_dates.py  test_analyzer_error_paths.py  test_analyzer_refactored_methods.py  test_analyzer_security.py  test_base_formatter.py  test_chart_formatter.py  test_cli.py  test_coverage_analyzer.py  test_coverage_analyzer_security.py  test_date_errors.py  test_date_utils.py  test_emoji_functionality.py  test_enhanced_standard_formatter.py  test_extended_formatter.py  test_extended_formatter_additional.py  test_extended_formatter_coverage.py  test_extended_formatter_emoji.py  test_extended_formatter_enhanced.py  test_extended_formatter_file_lifecycle.py  test_extended_formatter_frequent_files.py  test_extended_formatter_largest_changes.py  test_formatters.py  test_heatmap_formatter.py  test_json_formatter.py  test_models.py  test_property_based.py  test_range_analytics.py  test_rich_formatter.py  test_security_validation.py  test_timezone_handling.py  test_timezone_handling.py.bak
tests/unit/analytics/: test_collaboration_analyzer.py  test_time_analyzer.py
(+2 files in other folders)
